Add debouncing with notify-debouncer-mini
- Replace direct notify dependency with notify-debouncer-mini
- Add configurable debounce duration (500ms default)
- Batches rapid file changes before processing
- Use notify re-exported from debouncer to avoid version conflicts
- Improve error handling for file read/parse failures

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2024"
 [workspace]
 
 [dependencies]
-notify = "8.2.0"
+notify-debouncer-mini = "0.5.0"
 syndicate-json-canvas-lib = { path = "syndicate-json-canvas-lib" }
