Create frontend sinks library with JJ repository sink
- Create new syndicate-json-canvas-sinks library crate
- Define SyndicationSink trait with dry-run mode support
- Implement JjRepositorySink with full JJ workflow:
  * git fetch to refresh
  * new revision with generated commit message
  * write file with frontmatter (title, date)
  * move bookmark
  * git push
- Slug generation from first 8 words (sanitized, URL-safe)
- Wire up JJ sink in main binary with configuration constants
- Support dry-run mode for testing without actually publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [workspace]
+members = ["syndicate-json-canvas-sinks"]
 
 [dependencies]
 notify-debouncer-mini = "0.5.0"
 syndicate-json-canvas-lib = { path = "syndicate-json-canvas-lib" }
+syndicate-json-canvas-sinks = { path = "syndicate-json-canvas-sinks" }
