--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ members = ["syndicate-json-canvas-sinks"]
 notify-debouncer-mini = "0.5.0"
 syndicate-json-canvas-lib = { path = "syndicate-json-canvas-lib" }
 syndicate-json-canvas-sinks = { path = "syndicate-json-canvas-sinks" }
+toml = "0.8"
+serde = { version = "1.0", features = ["derive"] }
