Replace all debug printing with tracing crate
- Add tracing and tracing-subscriber dependencies to binary and sinks
- Initialize tracing subscriber with line numbers and file names
- Set log level to DEBUG when DRY_RUN=true, otherwise INFO
- Replace all println! with info! or debug! macros
- Replace all eprintln! with error! macros
- Use structured logging with field values throughout
- JJ sink now uses tracing for all command execution logging
- All log output includes file name and line number for debugging

--- a/syndicate-json-canvas-sinks/Cargo.toml
+++ b/syndicate-json-canvas-sinks/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 syndicate-json-canvas-lib = { path = "../syndicate-json-canvas-lib" }
 thiserror = "2.0"
 chrono = "0.4"
+tracing = "0.1"
