--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ syndicate-json-canvas-lib = { path = "syndicate-json-canvas-lib" }
 syndicate-json-canvas-sinks = { path = "syndicate-json-canvas-sinks" }
 toml = "0.8"
 serde = { version = "1.0", features = ["derive"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
